manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backend-config"}'
spec:
  selector:
    app: nodeapp-deployment
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
